--- a/CodSoft/CodSoft/portfolio/index.html
+++ b/CodSoft/CodSoft/portfolio/index.html
@@ -393,7 +393,7 @@
                             <h1 class="footer-section-sub-heading">My Resume</h1>
                             <div>
                                 <i class="fas fa-envelope icon"></i>
-                                <a href="https://docs.google.com/document/d/16FIF4lSXyTo7JNJVVtjIkIJVzgf95khP0ue_kGVrjsI/edit" class="ml-2" target="_blank">View Resume</a>
+                                <a href="https://s3-ap-south-1.amazonaws.com/nkb-backend-ccbp-media-static/ccbp_prod/media/resume_generated/Prasanna_2023-10-31-115027.pdf" class="ml-2" target="_blank">View Resume</a>
                             </div>
                         </div>
 
